[package]
name = "serde-filter"
version = "0.1.0"
edition = "2021"

[lib]
name = "serde_filter"
path = "src/lib.rs"

[[example]]
name = "match"
path = "example/match.rs"

[[example]]
name = "flatten"
path = "example/flattener.rs"

[[example]]
name = "ignore"
path = "example/ignore.rs"

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
